# CosmoLog

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  agent_prompt.py  dashboard.py  journal.py  logging_config.py  mcp_server.py  models.py  nasa_client.py  pyproject.toml  technical-specification.md
.claude/: settings.json
.claude/skills/verify/: SKILL.md
docs/: agent-functional-specification.md  agent-implementation-plan.md  demo-guide.md  functional-specification.md  phase-1-models.md  phase-2-journal.md  phase-5-mcp-server.md
docs/mcp/: phase-3-nasa-client.md  phase-4-dashboard.md
static/: index.html
tests/: conftest.py  test_agent.py  test_agent_prompt.py  test_agent_server.py  test_dashboard.py  test_journal.py  test_logging_config.py  test_mcp_server.py  test_models.py  test_nasa_client.py
